# privibe

./: .gitignore  README.md  build-deb.sh  build-windows-zip.sh  flake.nix  privibe-acp.spec  privibe.spec  pyproject.toml
distribution/zed/: extension.toml
docs/: README.md  acp-setup.md  running-in-windows-git-bash.md
privibe/: __init__.py  whats_new.md
privibe/acp/: acp_agent_loop.py  acp_logger.py  entrypoint.py  exceptions.py  utils.py
privibe/cli/: cli.py  clipboard.py  commands.py  entrypoint.py  terminal_setup.py
privibe/core/: __init__.py  agent_loop.py  conversation.py  integration_registry.py  logger.py  middleware.py  output_formatters.py  plan_session.py  programmatic.py  project_tree.py  proxy_setup.py  system_prompt.py  trusted_folders.py  types.py
scripts/: bump_version.py
tests/: conftest.py  test_agent_auto_compact.py  test_agent_backend.py  test_agent_observer_streaming.py  test_agent_stats.py  test_agent_tool_call.py  test_agent_write_serialization.py  test_agents.py  test_cli_programmatic_preload.py  test_context_size_detection.py  test_history_manager.py  test_message_id.py  test_message_merging.py  test_middleware.py  test_preview_lines.py  test_reasoning_content.py  test_system_prompt.py  test_tagged_text.py  test_turn_summary.py  test_ui_external_editor.py  test_ui_input_history.py  test_ui_rewind.py  test_ui_rewind_windowed.py
tests/acp/: conftest.py  smoke_binary.py  test_acp.py  test_acp_entrypoint_smoke.py  test_agent_thought.py  test_bash.py  test_compact_session_updates.py  test_content.py  test_initialize.py  test_list_sessions.py  test_load_session.py  test_message_id.py  test_multi_session.py  test_new_session.py  test_proxy_setup_acp.py  test_read_file.py  test_search_replace.py  test_set_config_option.py  test_set_mode.py  test_set_model.py  test_tool_call_session_update.py  test_usage_update.py  test_utils.py  test_write_file.py
tests/audio_player/: test_audio_player.py
tests/audio_recorder/: test_audio_recorder.py
tests/autocompletion/: conftest.py  test_file_enumerator.py  test_fuzzy.py  test_path_completer_fuzzy.py  test_path_completer_recursive.py  test_path_completion_controller.py  test_path_prompt_transformer.py  test_slash_command_controller.py  test_ui_chat_autocompletion.py  test_visible_window.py
tests/backend/: test_anthropic_adapter.py  test_backend.py  test_reasoning_adapter.py  test_vertex_anthropic_adapter.py
tests/cli/: test_bell_notifications.py  test_braille_renderer.py  test_clipboard.py  test_commands.py  test_copy_shortcuts.py  test_external_editor.py  test_feedback_bar.py  test_no_markup_static.py  test_question_app.py  test_spinner.py  test_switching_mode.py  test_ui_clipboard_notifications.py  test_ui_config_and_model_picker.py  test_ui_prune.py  test_ui_session_exit.py  test_ui_session_incremental_renderer.py  test_ui_session_resume.py  test_ui_skill_dispatch.py
tests/core/: test_agents.py  test_backend_error.py  test_config_load_dotenv.py  test_config_migration.py  test_config_paths.py  test_config_resolution.py  test_file_logging.py  test_local_config_walk.py  test_path_config_roundtrip.py  test_path_dialect.py  test_plan_session.py  test_project_tree.py  test_proxy_setup.py  test_retry.py  test_rewind_integration.py  test_rewind_manager.py  test_slug.py  test_transcribe_config.py  test_trusted_folders.py  test_tts_config.py  test_undo_stack.py  test_utils.py
tests/e2e/: common.py  conftest.py  test_cli_tui_session_exit.py  test_cli_tui_streaming.py
tests/integrations/: test_integration_registry.py
tests/mock/: mock_backend_factory.py  mock_entrypoint.py  utils.py
tests/session/: test_resume_sessions.py  test_session_loader.py  test_session_logger.py  test_session_migration.py
tests/skills/: conftest.py  test_manager.py  test_models.py  test_parser.py
tests/snapshots/: base_snapshot_test_app.py  conftest.py  test_ui_snapshot_ask_user_question.py  test_ui_snapshot_code_block_horizontal_scrolling.py  test_ui_snapshot_feedback_bar.py  test_ui_snapshot_model_picker.py  test_ui_snapshot_narrator_flow.py  test_ui_snapshot_parallel_tool_calls.py  test_ui_snapshot_proxy_setup.py  test_ui_snapshot_question_app.py  test_ui_snapshot_reasoning_content.py  test_ui_snapshot_rewind.py  test_ui_snapshot_session_resume.py  test_ui_snapshot_session_resume_injected.py  test_ui_snapshot_streaming_tool_call.py  (+1 more)
(+202 files in other folders)
