[project]
name = "fws-privibe"
version = "0.1.0"
description = "Minimal CLI coding agent for private, local-first development"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Privibe Contributors" }]
keywords = [
    "ai",
    "cli",
    "coding-assistant",
    "llm",
    "developer-tools",
]
classifiers = [
      "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "agent-client-protocol==0.9.0",
    "anyio>=4.12.0",
    "google-auth>=2.0.0",
    "httpx>=0.28.1",
    "markdownify>=1.2.2",
    "mcp>=1.14.0",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "pyperclip>=1.11.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "rich>=14.0.0",
    "sounddevice>=0.5.1",
    "textual>=8.1.1",
    "tomli-w>=1.2.0",
    "tree-sitter>=0.25.2",
    "tree-sitter-bash>=0.25.1",
    "websockets>=13.0",
]

[project.optional-dependencies]
mistral = ["mistralai>=2.1.3"]

[build-system]
requires = ["hatchling", "hatch-vcs", "editables"]
build-backend = "hatchling.build"

#[tool.hatch.metadata]
#allow-direct-references = true

[tool.hatch.build.targets.wheel]
include = ["privibe/"]


[project.scripts]
privibe = "privibe.cli.entrypoint:main"
privibe-acp = "privibe.acp.entrypoint:main"


[tool.uv]
exclude-newer = "2026-04-07"
exclude-newer-package = { agent-client-protocol = false }

package = true
required-version = ">=0.8.0"


[dependency-groups]
dev = [
    "debugpy>=1.8.19",
    # Optional runtime extra (see [project.optional-dependencies].mistral), but the
    # test suite's shared fixtures assume the Mistral integration is loadable, so it
    # must be present in the dev/test environment. Not a shipped runtime dependency.
    "mistralai>=2.1.3",
    "pexpect>=4.9.0",
    "pre-commit>=4.2.0",
    "pyright>=1.1.403",
    "pytest>=8.3.5",
    "pytest-asyncio>=1.2.0",
    "pytest-textual-snapshot>=1.1.0",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.8.0",
    "respx>=0.22.0",
    "ruff>=0.14.5",
    "twine>=5.0.0",
    "typos>=1.34.0",
    "vulture>=2.14",
]

build = ["pyinstaller>=6.17.0", "truststore>=0.10.4"]

[tool.pyright]
pythonVersion = "3.12"
reportMissingTypeStubs = false
reportPrivateImportUsage = false

include = ["privibe/**/*.py", "tests/**/*.py"]
exclude = ["pyinstaller/"]
venvPath = "."
venv = ".venv"

[tool.ruff]
include = ["privibe/**/*.py", "tests/**/*.py"]
exclude = ["pyinstaller/"]
line-length = 88
target-version = "py312"
preview = true

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = [
    "F",
    "I",
    "D2",
    "UP",
    "TID",
    "ANN",
    "PLR",
    "B0",
    "B905",
    "DOC102",
    "RUF022",
    "RUF010",
    "RUF012",
    "RUF019",
    "RUF100",
]
ignore = ["D203", "D205", "D213", "ANN401", "PLR6301"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "PLR"]
# Textual parent classes don't use ClassVar, so we can't either without breaking pyright
"privibe/cli/textual_ui/ansi_markdown.py" = ["RUF012"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.isort]
known-first-party = ["privibe"]
force-sort-within-sections = true
split-on-trailing-comma = false
combine-as-imports = true
force-wrap-aliases = false
order-by-type = true
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.pylint]
max-statements = 50
max-branches = 15
max-locals = 15
max-args = 9
max-returns = 6
max-nested-blocks = 4

[tool.vulture]
ignore_decorators = ["@*"]

[tool.pytest.ini_options]
addopts = "-vvvv -q -n auto --durations=10 --import-mode=importlib --maxschedchunk=1"
timeout = 10
filterwarnings = [
    # (e2e) streaming mock server is started in a thread; and the cli is spawn in a fork
    "ignore:This process \\(pid=.*\\) is multi-threaded, use of forkpty\\(\\) may lead to deadlocks in the child\\.:DeprecationWarning",
]
